		   all 'ext-*' tags are renamed; see ecasoundrc(5)
	- changed: 'make install' will now overwrite old 
		   data files ({prefix}/share/ecasound/*)
	- fixed: problems with automake1.5
	- fixed: eiam - 'ao-get-position' returned an integer 
		 value instead of a float as it should
	- fixed: bugs with combining -ei and LADSPA plugins
	- fixed: 2.1dev5 wrote broken wav-headers
05122001 (v2.1dev5)
	- added: docs - Documentation/manpages.html
	- added: ecalength - -su option added [smassy]
	- added: experimental support for largefiles (>2GB); 
		 enabled with --with-largefile configure option
	- changed: most preset names changed in 'effect_presets'
	- changed: ecasoundrc - new defaults for mp3 and ogg
		   output
	- changed: unified kvutils build process; added separate
	           libkvutils_debug target; CXXFLAGS shared with
		   ecasound build configuration
	- fixed: processing didn't stop with setups that had loop-
		 devices connected to multiple input objects
	- fixed: using loop devices in setups with non-default 
                 internal sample rate could cause unwanted 
  		 resampling
	- fixed: -kog and -f were broken (since dev4)
	- fixed: bugs in passing audio format params to 
                 mp3 and ogg encoders; note! update your 
		 ~/.ecasoundrc to match the new defaults,
		 see ecasoundrc(5) man page
	- fixed: ecasound wrote to ewf-files opened in read-only mode
	- fixed: work-around for environments without the C99 stdint.h
                 header file [anarcat]
	- fixed: eiam - problems with 'cs-set-position-samples', 
                 'cs-rewind' and 'cs-forward' with unconnected
		 chainsetups
31102001 (v2.1dev4)
	- added: eiam - 'cs-option' commmand; although explicit use 
		 of cmd-line options as iactive-mod commands (like 
                 "-i:file.wav") is still supported, "cs-option 
                 -i:file.wav" is now the preferred syntax
	- removed: ecasound FAQ file - it only contains about 	 