@@ -10,7 +10,6 @@
 class COMMAND_LINE;
 
 void print_header(ostream* dostream);
-void signal_handler(int signum);
 void parse_command_line(COMMAND_LINE& cline);
 
 void start_iactive(ECA_SESSION* param);
