@@ -39,6 +39,7 @@ Last officially released version is -*> v2.0.3 *-
 		 value instead of a float as it should
 	- fixed: bugs with combining -ei and LADSPA plugins
 	- fixed: 2.1dev5 wrote broken wav-headers
+	- fixed: minor changes to posix signal handling
 05122001 (v2.1dev5)
 	- added: docs - Documentation/manpages.html
 	- added: ecalength - -su option added [smassy]
